@@ -1,3 +1,14 @@
+2014-08-27  Timothy Hatcher  <timothy@apple.com>
+
+        Web Inspector: Crash when you open Web Inspector in a private window (due to IndexedDB)
+        https://bugs.webkit.org/show_bug.cgi?id=136293
+
+        Reviewed by Joseph Pecoraro.
+
+        * inspector/InspectorIndexedDBAgent.cpp:
+        (WebCore::InspectorIndexedDBAgent::requestDatabaseNames): Null check idbRequest from
+        IDBFactory::getDatabaseNames, which can return null now after r172603 in private browsing.
+
 2014-08-27  Beth Dakin  <bdakin@apple.com>
 
         overflow:scroll elements should not latch to the body if the body is 
